# BrowserBookmarkChecker

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_GOALS.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
bookmark_checker/: __init__.py  __main__.py  app.py
bookmark_checker/core/: __init__.py  dedupe.py  exporters.py  merge.py  models.py  parsers.py  utils.py
bookmark_checker/i18n/: __init__.py  translations.py
bookmark_checker/ui/: __init__.py  main_window.py
docs/: api.md  architecture.md  cli.md  configuration.md  faq.md  getting-started.md  index.md  installation.md  quick-start.md  troubleshooting.md  usage.md
docs/examples/: example-01.md  example-02.md
examples/: sample_chrome_bookmarks.json  sample_chrome_export.html
media_checker/: __init__.py  __main__.py  app.py
media_checker/core/: __init__.py  dedupe.py  exporters.py  metadata.py  models.py  scanner.py  utils.py
media_checker/i18n/: __init__.py  translations.py
media_checker/ui/: __init__.py  main_window.py
scripts/: build_nuitka.sh  build_pyinstaller.sh  create_release.sh  run_cli.sh  run_gui.sh
tests/: __init__.py  test_dedupe.py  test_merge_export.py  test_parsers.py  test_utils.py
